--- a/.github/workflows/daily_checks.yml
+++ b/.github/workflows/daily_checks.yml
@@ -9,6 +9,19 @@ on:
 jobs:
   run-tests:
     runs-on: ubuntu-latest
+
+    jobs:
+    run-tests:
+      runs-on: ubuntu-latest
+
+      env:
+        FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+        FB_APP_ID: ${{ secrets.FB_APP_ID }}
+        FB_APP_SECRET: ${{ secrets.FB_APP_SECRET }}
+        NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        META_API_VERSION: ${{ secrets.META_API_VERSION }}
+
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
