--- a/.github/workflows/daily_checks.yml
+++ b/.github/workflows/daily_checks.yml
@@ -2,25 +2,23 @@ name: Daily checks
 
 on:
   schedule:
-    # 14:00 UTC every day (adjust below if you want a different time)
+    # 14:00 UTC = 9:00 AM CDT. Change if you want a different time.
     - cron: "0 14 * * *"
-  workflow_dispatch: {}  # lets you run it manually too
+  workflow_dispatch:
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
 
-    jobs:
-    run-tests:
-      runs-on: ubuntu-latest
-
-      env:
-        FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-        FB_APP_ID: ${{ secrets.FB_APP_ID }}
-        FB_APP_SECRET: ${{ secrets.FB_APP_SECRET }}
-        NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        META_API_VERSION: ${{ secrets.META_API_VERSION }}
+    # Make secrets available to ALL steps
+    env:
+      FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+      FB_TOKEN:        ${{ secrets.FB_TOKEN }}           # optional fallback
+      FB_APP_ID:       ${{ secrets.FB_APP_ID }}
+      FB_APP_SECRET:   ${{ secrets.FB_APP_SECRET }}
+      NOTION_TOKEN:    ${{ secrets.NOTION_TOKEN }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      META_API_VERSION:  ${{ secrets.META_API_VERSION }}
 
     steps:
       - name: Check out repo
@@ -29,35 +27,27 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.x"
 
       - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
-      # --- Meta test ---
       - name: Meta test
-        env:
-          FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN || secrets.FB_TOKEN }}
-          FB_APP_ID:       ${{ secrets.FB_APP_ID }}
-          FB_APP_SECRET:   ${{ secrets.FB_APP_SECRET }}
-          NOTION_TOKEN:    ${{ secrets.NOTION_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          python scripts/test_meta.py
+        run: python scripts/test_meta.py
 
-      # --- Notion test ---
       - name: Notion test
-        env:
-          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-        run: |
-          python scripts/test_notion.py
+        run: python scripts/test_notion.py
 
-      # --- Slack test (only if previous steps failed) ---
+      - name: Slack test
+        if: ${{ success() }}
+        run: python scripts/test_slack.py
+
       - name: Notify Slack on failure
-        if: failure()
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: ${{ failure() }}
         run: |
-          python scripts/test_slack.py
+          python - <<'PY'
+          import os, json, requests
+          url = os.environ["SLACK_WEBHOOK_URL"]
+          requests.post(url, data=json.dumps({"text": "❌ Daily checks failed. See Actions logs."}),
+                        headers={"Content-Type":"application/json"}, timeout=20)
+          PY
