--- a/.github/workflows/daily_checks.yml
+++ b/.github/workflows/daily_checks.yml
@@ -10,15 +10,17 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
 
-    # Make secrets available to ALL steps
+    # ✅ make all secrets available to the scripts
     env:
+      META_API_VERSION: ${{ secrets.META_API_VERSION }}
       FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-      FB_TOKEN:        ${{ secrets.FB_TOKEN }}           # optional fallback
-      FB_APP_ID:       ${{ secrets.FB_APP_ID }}
-      FB_APP_SECRET:   ${{ secrets.FB_APP_SECRET }}
-      NOTION_TOKEN:    ${{ secrets.NOTION_TOKEN }}
+      # set both in case code falls back to FB_TOKEN
+      FB_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+      FB_APP_ID: ${{ secrets.FB_APP_ID }}
+      FB_APP_SECRET: ${{ secrets.FB_APP_SECRET }}
+      NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      META_API_VERSION:  ${{ secrets.META_API_VERSION }}
+
 
     steps:
       - name: Check out repo
