--- a/.github/workflows/daily_checks.yml
+++ b/.github/workflows/daily_checks.yml
@@ -2,25 +2,24 @@ name: Daily checks
 
 on:
   schedule:
-    # 14:00 UTC = 9:00 AM CDT. Change if you want a different time.
+    # 14:00 UTC every day (change if you want a different time)
     - cron: "0 14 * * *"
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
 
-    # ✅ make all secrets available to the scripts
+    # make all secrets available to the scripts
     env:
       META_API_VERSION: ${{ secrets.META_API_VERSION }}
-      FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-      # set both in case code falls back to FB_TOKEN
-      FB_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-      FB_APP_ID: ${{ secrets.FB_APP_ID }}
-      FB_APP_SECRET: ${{ secrets.FB_APP_SECRET }}
-      NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      AD_ACCOUNT_ID: ${{ secrets.AD_ACCOUNT_ID }}
+      FB_ACCESS_TOKEN:  ${{ secrets.FB_ACCESS_TOKEN }}
+      FB_TOKEN:         ${{ secrets.FB_ACCESS_TOKEN }}   # fallback used by config.py
+      FB_APP_ID:        ${{ secrets.FB_APP_ID }}
+      FB_APP_SECRET:    ${{ secrets.FB_APP_SECRET }}
+      NOTION_TOKEN:     ${{ secrets.NOTION_TOKEN }}
+      SLACK_WEBHOOK_URL:${{ secrets.SLACK_WEBHOOK_URL }}
+      AD_ACCOUNT_ID:    ${{ secrets.AD_ACCOUNT_ID }}     # only used if your health script needs it
 
     steps:
       - name: Check out repo
@@ -34,18 +33,20 @@ jobs:
       - name: Install deps
         run: pip install -r requirements.txt
 
-      - name: Meta health check
-      run: python scripts/check_meta_health.py
-
       - name: Meta test
         run: python scripts/test_meta.py
 
       - name: Notion test
         run: python scripts/test_notion.py
 
-      - name: Slack test
+      - name: Slack test (only if previous steps passed)
         if: ${{ success() }}
         run: python scripts/test_slack.py
+
+      # Optional extra check you added
+      - name: Meta health check
+        if: ${{ success() }}
+        run: python scripts/check_meta_health.py
 
       - name: Notify Slack on failure
         if: ${{ failure() }}
@@ -53,6 +54,10 @@ jobs:
           python - <<'PY'
           import os, json, requests
           url = os.environ["SLACK_WEBHOOK_URL"]
-          requests.post(url, data=json.dumps({"text": "❌ Daily checks failed. See Actions logs."}),
-                        headers={"Content-Type":"application/json"}, timeout=20)
+          requests.post(
+            url,
+            data=json.dumps({"text": "❌ Daily checks failed. See Actions logs."}),
+            headers={"Content-Type": "application/json"},
+            timeout=20,
+          )
           PY
