--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -34,9 +34,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run fatigue + alerts (14d window, 7d baseline)
-        run: |
-          python scripts/run_fatigue.py --level ad --days 14 --baseline_days 7
+  - name: Run fatigue + alerts (14d window, 7d baseline)
+    run: |
+      python cenus/scripts/run_fatigue.py --level ad --days 14 --baseline_days 7
 
   daily_refresh:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '5 6 * * *')
@@ -60,6 +60,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Daily pipeline (pull → push → alerts)
-        run: |
-          python scripts/run_daily_pipeline.py
+- name: Daily pipeline (pull → push → alerts)
+  run: |
+    python cenus/scripts/run_daily_pipeline.py
