--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -2,11 +2,9 @@ name: Cenus AI Scheduler
 
 on:
   schedule:
-    # Every 15 minutes: run fatigue + alerts
-    - cron: "*/15 * * * *"
-    # Daily at 06:05 UTC (~00:05 America/Chicago)
-    - cron: "5 6 * * *"
-  workflow_dispatch: {}
+    - cron: "*/15 * * * *"   # every 15 min → fatigue + alerts
+    - cron: "5 6 * * *"      # daily at 06:05 UTC → daily pipeline
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -16,10 +14,10 @@ jobs:
     if: github.event_name == 'schedule' && github.event.schedule == '*/15 * * * *'
     runs-on: ubuntu-latest
     env:
-      FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-      FB_APP_ID: ${{ secrets.FB_APP_ID }}
-      FB_APP_SECRET: ${{ secrets.FB_APP_SECRET }}
-      NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+      FB_ACCESS_TOKEN:  ${{ secrets.FB_ACCESS_TOKEN }}
+      FB_APP_ID:        ${{ secrets.FB_APP_ID }}
+      FB_APP_SECRET:    ${{ secrets.FB_APP_SECRET }}
+      NOTION_TOKEN:     ${{ secrets.NOTION_TOKEN }}
       META_API_VERSION: ${{ secrets.META_API_VERSION }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
@@ -34,18 +32,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-  - name: Run fatigue + alerts (14d window, 7d baseline)
-    run: |
-      python cenus/scripts/run_fatigue.py --level ad --days 14 --baseline_days 7
+      - name: Run fatigue + alerts (14d window, 7d baseline)
+        run: |
+          python cenus/scripts/run_fatigue.py --level ad --days 14 --baseline_days 7
 
   daily_refresh:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '5 6 * * *')
     runs-on: ubuntu-latest
     env:
-      FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-      FB_APP_ID: ${{ secrets.FB_APP_ID }}
-      FB_APP_SECRET: ${{ secrets.FB_APP_SECRET }}
-      NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+      FB_ACCESS_TOKEN:  ${{ secrets.FB_ACCESS_TOKEN }}
+      FB_APP_ID:        ${{ secrets.FB_APP_ID }}
+      FB_APP_SECRET:    ${{ secrets.FB_APP_SECRET }}
+      NOTION_TOKEN:     ${{ secrets.NOTION_TOKEN }}
       META_API_VERSION: ${{ secrets.META_API_VERSION }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
@@ -60,6 +58,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-- name: Daily pipeline (pull → push → alerts)
-  run: |
-    python cenus/scripts/run_daily_pipeline.py
+      - name: Daily pipeline (pull → push → alerts)
+        run: |
+          python cenus/scripts/run_daily_pipeline.py
