--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -1,64 +1,70 @@
-name: Cenus AI Scheduler
+name: Cenus Schedules
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # every 15 min → fatigue + alerts
-    - cron: "5 6 * * *"      # daily at 06:05 UTC → daily pipeline
-  workflow_dispatch:
-
-permissions:
-  contents: read
+    # Alerts every 15 minutes
+    - cron: "*/15 * * * *"
+    # Daily report 09:00 America/Chicago ~= 14:00 UTC during DST
+    - cron: "0 14 * * *"
+  workflow_dispatch: {}  # allow manual test runs
+  push:
+    paths:
+      - ".github/workflows/cenus.yml"
+      - "scripts/**"
+      - "src/**"
+      - "clients.json"
 
 jobs:
-  alerts_quarter_hour:
-    if: github.event_name == 'schedule' && github.event.schedule == '*/15 * * * *'
+  alerts:
+    if: github.event_name == 'workflow_dispatch' || contains(join(fromJson('["*/15 * * * *","0 14 * * *"]'),','), '*/15 * * * *') || github.event.schedule == '*/15 * * * *'
     runs-on: ubuntu-latest
-    env:
-      FB_ACCESS_TOKEN:  ${{ secrets.FB_ACCESS_TOKEN }}
-      FB_APP_ID:        ${{ secrets.FB_APP_ID }}
-      FB_APP_SECRET:    ${{ secrets.FB_APP_SECRET }}
-      NOTION_TOKEN:     ${{ secrets.NOTION_TOKEN }}
-      META_API_VERSION: ${{ secrets.META_API_VERSION }}
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-  - name: Run fatigue + alerts (14d window, 7d baseline)
-    run: |
-      python scripts/run_fatigue.py --level ad --days 14 --baseline_days 7
 
+      - name: Run alerts (15-min)
+        env:
+        FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+        NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+        NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          python scripts/cron_alerts.py
 
-  daily_refresh:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '5 6 * * *')
+  daily_report:
+    if: github.event_name == 'workflow_dispatch' || github.event.schedule == '0 14 * * *'
     runs-on: ubuntu-latest
-    env:
-      FB_ACCESS_TOKEN:  ${{ secrets.FB_ACCESS_TOKEN }}
-      FB_APP_ID:        ${{ secrets.FB_APP_ID }}
-      FB_APP_SECRET:    ${{ secrets.FB_APP_SECRET }}
-      NOTION_TOKEN:     ${{ secrets.NOTION_TOKEN }}
-      META_API_VERSION: ${{ secrets.META_API_VERSION }}
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    timeout-minutes: 20
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        - name: Daily pipeline (pull → push → alerts)
-          run: |
-            python scripts/run_daily_pipeline.py
+
+      - name: Run daily report
+        env:
+        FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+        NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+        NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          python scripts/cron_daily_report.py
