fix: clean on: header

--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -1,18 +1,16 @@
 name: Cenus Schedules
 
 on:
-  schedule:
-    # Alerts every 15 minutes
-    - cron: "*/15 * * * *"
-    # Daily report 09:00 America/Chicago ~= 14:00 UTC during DST
-    - cron: "0 14 * * *"
-  workflow_dispatch: {}  # allow manual test runs
+  workflow_dispatch:      # allow manual runs
   push:
     paths:
-      - ".github/workflows/cenus.yml"
-      - "scripts/**"
-      - "src/**"
-      - "clients.json"
+      - .github/workflows/cenus.yml
+      - scripts/**
+      - src/**
+      - clients.json
+  schedule:
+    - cron: '*/15 * * * *'  # alerts
+    - cron: '0 14 * * *'    # daily report
 
  jobs:
  alerts:
