--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -1,22 +1,21 @@
 name: Cenus Schedules
 
 on:
-  workflow_dispatch:     # allow manual runs
+  workflow_dispatch:  # allow manual runs
   push:
     paths:
-      - '.github/workflows/cenus.yml'
-      - 'scripts/**'
-      - 'src/**'
-      - 'clients.json'
+      - .github/workflows/cenus.yml
+      - scripts/**
+      - src/**
+      - clients.json
   schedule:
     # Alerts every 15 minutes
-    - cron: '*/15 * * * *'
+    - cron: "*/15 * * * *"
     # Daily report 14:00 UTC
-    - cron: '0 14 * * *'
+    - cron: "0 14 * * *"
 
 jobs:
   alerts:
-    # run on manual, push, or the */15 schedule
     if: github.event_name == 'workflow_dispatch' || github.event_name == 'push' || (github.event_name == 'schedule' && github.event.schedule == '*/15 * * * *')
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -24,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
@@ -35,13 +34,10 @@ jobs:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          - name: Run alerts (15-min)
-            run: |
-              python scripts/cron_alerts.py
-
+        run: |
+          python scripts/cron_alerts.py
 
   daily_report:
-    # run on manual or the 0 14 schedule
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.event.schedule == '0 14 * * *')
     runs-on: ubuntu-latest
     timeout-minutes: 20
@@ -49,7 +45,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
@@ -60,6 +56,5 @@ jobs:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          - name: Run daily report
-            run: |
-              python scripts/cron_daily_report.py
+        run: |
+          python scripts/cron_daily_report.py
