--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -28,14 +28,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run alerts (15-min)
-        env:
-          FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-          NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          python cenus/scripts/cron_alerts.py
+          - name: Run alerts (15-min)
+            run: |
+              set -e
+              python - <<'PY'
+          import traceback, runpy
+          print("=== STARTING alerts job ===")
+          try:
+          + runpy.run_path("scripts/cron_alerts.py", run_name="__main__")
+              print("✅ SUCCESS: alerts ran without errors.")
+          except Exception as e:
+              print("❌ ERROR:", e)
+              traceback.print_exc()
+              raise
+          PY
+
 
 
   daily_report:
@@ -51,11 +58,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run daily report
-        env:
-          FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
-          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-          NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          python cenus/scripts/cron_daily_report.py
+          - name: Run daily report
+            run: |
+              set -e
+              python - <<'PY'
+          import traceback, runpy
+          print("=== STARTING daily_report job ===")
+          try:
+          + runpy.run_path("scripts/cron_daily_report.py", run_name="__main__")
+              print("✅ SUCCESS: daily_report ran without errors.")
+          except Exception as e:
+              print("❌ ERROR:", e)
+              traceback.print_exc()
+              raise
+          PY
+
