--- a/.github/workflows/cenus.yml
+++ b/.github/workflows/cenus.yml
@@ -1,7 +1,7 @@
-name: Cenus Schedules
+name: Cenus AI Scheduler
 
 on:
-  workflow_dispatch: {}   # allow manual runs
+  workflow_dispatch: {}          # allow manual runs
   push:
     paths:
       - .github/workflows/cenus.yml
@@ -9,42 +9,46 @@ on:
       - src/**
       - clients.json
   schedule:
-    - cron: "*/15 * * * *"   # alerts every 15 min
-    - cron: "5 6 * * *"      # daily 06:05 UTC (~00:05 Central)
+    - cron: "*/15 * * * *"       # alerts every 15 minutes
+    - cron: "5 6 * * *"          # daily at 06:05 UTC (~00:05 CT)
+
+permissions:
+  contents: read
+
+env:
+  FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
+  FB_APP_ID:       ${{ secrets.FB_APP_ID }}
+  FB_APP_SECRET:   ${{ secrets.FB_APP_SECRET }}
+  NOTION_TOKEN:    ${{ secrets.NOTION_TOKEN }}
+  META_API_VERSION:${{ secrets.META_API_VERSION }}
 
 jobs:
   alerts:
-    # run only on the 15-min cron
-    if: github.event_name == 'schedule' && github.event.schedule == '*/15 * * * *'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
+        with: { python-version: "3.11", cache: "pip" }
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run alerts (15-min)
         run: |
-          python scripts/run_fatigue_and_alerts.py --level ad --days 14 --baseline_days 7
+          python scripts/run_fatigue.py --level ad --days 14 --baseline_days 7 || true
 
   daily_refresh:
-    # run on the daily cron OR when manually dispatched
-    if: github.event_name != 'schedule' || github.event.schedule == '5 6 * * *'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
+        with: { python-version: "3.11", cache: "pip" }
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Daily pipeline (pull → push → alerts)
         run: |
-          python scripts/run_daily_pipeline.py
+          pytho- name: Run alerts (15-min)
+            run: |
+              python scripts/run_fatigue.py --level ad --days 14 --baseline_days 7 || true
